# SinaiEcho

./: .gitignore  CMakeLists.txt  Channel.cpp  Channel.h  Connection.cpp  Connection.h  DebugInfo.h  EventLoop.cpp  EventLoop.h  Lib4Unity.cpp  Lib4Unity.h  Message.cpp  Message.h  NetConnection.cpp  NetConnection.h  NetManager.cpp  NetManager.h  NetManagerWorker.cpp  NetManagerWorker.h  NetManagerWorkerClient.cpp  NetManagerWorkerClient.h  NetManagerWorkerServer.cpp  NetManagerWorkerServer.h  NetMessage.cpp  NetMessage.h  NetSystem.cpp  NetSystem.h  SCPPSocketDelegate.h  SCPPSocketFactory.cpp  SCPPSocketFactory.h  Socket.cpp  Socket.h  SocketType.h  SocketUtil.cpp  SocketUtil.h  TCPClient.cpp  TCPClient.h  TCPConnection.cpp  TCPConnection.h  TCPServer.cpp  (+1 more)
Android/: SCPPSocketAndroid.cpp  SCPPSocketAndroid.h  SCPPSocketFactoryAndroid.cpp  SCPPSocketFactoryAndroid.h
IOS/: SCPPSocketFactoryIOS.cpp  SCPPSocketFactoryIOS.h  SocketIOS.cpp  SocketIOS.h  TCPClientNetManagerWorkerIOS.h  TCPServerNetManagerWorkerIOS.h
Linux/: SCPPSocketFactoryLinux.cpp  SCPPSocketFactoryLinux.h  SocketLinux.cpp  SocketLinux.h
Mac/: SCPPSocketFactoryMac.cpp  SCPPSocketFactoryMac.h  SocketMac.cpp  SocketMac.h
Poller/: EpollPoller.cpp  EpollPoller.h  KqueuePoller.cpp  KqueuePoller.h  Poller.cpp  Poller.h  SelectPoller.cpp  SelectPoller.h
Test/: Client.cpp  Main.cpp
Wakeup/: EventfdWakeup.cpp  EventfdWakeup.h  PipeWakeup.cpp  PipeWakeup.h  SocketWakeup.cpp  SocketWakeup.h  Wakeup.cpp  Wakeup.h
Win/: SCPPSocketFactoryWin.cpp  SCPPSocketFactoryWin.h  SocketWin.cpp  SocketWin.h
lib/: PollerWin.lib  SocketWin.lib  WakeupWin.lib
