cmake_minimum_required(VERSION 3.22)
project(SinaiEcho)
set(CMAKE_CXX_STANDARD 14)
#set(CMAKE_CXX_STANDARD 17)
#set(CMAKE_CXX_STANDARD_REQUIRED ON)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fms-extensions")
#set(DCMAKE_VERBOSE_MAKEFILE on)

if (CMAKE_HOST_WIN32)
    set(WINDOWS 1)
    MESSAGE(STATUS "Now is WINDOWS")
elseif (CMAKE_HOST_APPLE)
    set(MACOS 1)
    MESSAGE(STATUS "Now is APPLE")
elseif (CMAKE_HOST_SYSTEM_NAME MATCHES "Linux")
    set(LINUX 1)
    MESSAGE(STATUS "Now is LINUX")
endif ()


if(ANDROID)
    MESSAGE(STATUS "Now is ANDROID")
elseif(IOS)
    MESSAGE(STATUS "Now is IOS")
elseif (MACOS)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fms-extensions")
    set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
    MESSAGE(STATUS "Now is MACOS")
elseif (WINDOWS)
    set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
    MESSAGE(STATUS "Now is WINDOWS")
elseif (LINUX)
    set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
    MESSAGE(STATUS "Now is LINUX")
endif ()

MESSAGE(STATUS ${ANDROID})
MESSAGE(STATUS ${MACOS})
MESSAGE(STATUS ${LINUX})
MESSAGE(STATUS ${WINDOWS})
MESSAGE(STATUS ${IOS})
#set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
aux_source_directory(. DIR_SRCS1)
if(ANDROID)
    #aux_source_directory(./Android DIR_SRCS2)
    #add_library(SCPPSocketAndroid SHARED ${DIR_SRCS1} ${DIR_SRCS2})
elseif(IOS)
elseif (MACOS)
    aux_source_directory(./Mac DIR_SRCS2)
    add_library(SocketMac ${DIR_SRCS1} ${DIR_SRCS2} EventLoop.cpp  NetConnection.cpp  TCPServer.cpp  TCPClient.cpp NetMessage.cpp
            NetSystem.cpp)
    add_library(Poller  Poller/Poller.cpp Poller/KqueuePoller.cpp)
    add_library(Wakeup Wakeup/Wakeup.cpp  Wakeup/PipeWakeup.cpp )
    add_executable(Server Test/Main.cpp )
    target_link_libraries(Server SocketMac Poller Wakeup)
    add_executable(Client Test/Client.cpp)
    target_link_libraries(Client SocketMac Poller Wakeup)
elseif (WINDOWS)
 aux_source_directory(./Win DIR_SRCS2)
    add_library(SocketWin ${DIR_SRCS1} ${DIR_SRCS2} EventLoop.cpp  NetConnection.cpp  TCPServer.cpp  TCPClient.cpp  NetMessage.cpp
            NetSystem.cpp
            NetSystem.h)
    add_library(PollerWin  Poller/Poller.cpp  Poller/SelectPoller.cpp)
    add_library(WakeupWin Wakeup/Wakeup.cpp  Wakeup/SocketWakeup.cpp)
    add_executable(ServerWin Test/Main.cpp )
    add_executable(ClientWin Test/Client.cpp)
    target_link_libraries(ServerWin SocketWin PollerWin WakeupWin ws2_32)
    target_link_libraries(ClientWin SocketWin PollerWin WakeupWin ws2_32)


elseif (LINUX)
    aux_source_directory(./Linux DIR_SRCS2)
    add_library(SocketLinux ${DIR_SRCS1} ${DIR_SRCS2} EventLoop.cpp EventLoop.h NetConnection.cpp NetConnection.h TCPServer.cpp TCPServer.h TCPClient.cpp TCPClient.h NetMessage.cpp NetMessage.h
            NetSystem.cpp
            NetSystem.h)
    add_library(PollerLinux Poller/Poller.h Poller/Poller.cpp Poller/EpollPoller.cpp Poller/EpollPoller.h)
    add_library(WakeupLinux Wakeup/Wakeup.cpp Wakeup/Wakeup.h Wakeup/EventfdWakeup.cpp Wakeup/EventfdWakeup.h)
    add_executable(ServerLinux Test/Main.cpp )
    target_link_libraries(ServerLinux SocketLinux PollerLinux WakeupLinux)
    add_executable(ClientLinux Test/Client.cpp)
    target_link_libraries(ClientLinux SocketLinux PollerLinux WakeupLinux)
endif ()

